pxc/tests/test_031_thrattr/up2.px
public namespace up2;
import core::common -;

pure mtvaluetype struct bar {
  public int z;
}

pure function {f} int fts(int x)
{
  int r = f(3 + x);
  return r;
}

pure multithreaded struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  public function int getbz() const {
    pure function int foo(int x) {
      println(x); // error: not pure
      return x;
    }
    int x = fts{foo}(5);
    return x;
  }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

